force-app/main/default/objects/Currency__c/Currency__c.object-meta.xml
<CustomObject>
    <label>Currency</label>
    <nameField>
        <label>Currency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>