force-app/main/default/objects/Currency__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether this currency is currently used or historical</description>
    <inlineHelpText>Denotes whether this currency is currently used or historical</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>