force-app/main/default/objects/Currency__c/fields/Currency_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Currency_End_Date__c</fullName>
    <description>Date this currency stopped being used</description>
    <inlineHelpText>Date this currency stopped being used</inlineHelpText>
    <label>Currency End Date</label>
    <type>Date</type>
</CustomField>