force-app/main/default/objects/Currency__c/fields/Decimal_Digits__c.field-meta.xml
<CustomField>
    <fullName>Decimal_Digits__c</fullName>
    <description>Number of decimal digits this currency supports</description>
    <inlineHelpText>Number of decimal digits this currency supports</inlineHelpText>
    <label>Decimal Digits</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>