force-app/main/default/objects/Currency__c/fields/Name_Plural__c.field-meta.xml
<CustomField>
    <fullName>Name_Plural__c</fullName>
    <description>Plural name for this currency</description>
    <inlineHelpText>Plural name for this currency</inlineHelpText>
    <label>Name Plural</label>
    <length>255</length>
    <type>Text</type>
</CustomField>