force-app/main/default/objects/Currency__c/fields/Rounding__c.field-meta.xml
<CustomField>
    <fullName>Rounding__c</fullName>
    <label>Rounding</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>