force-app/main/default/objects/Currency__c/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <description>Symbol of the currency in the Latin Alphabet</description>
    <inlineHelpText>Symbol of the currency in the Latin Alphabet</inlineHelpText>
    <label>Symbol</label>
    <length>50</length>
    <type>Text</type>
</CustomField>