force-app/main/default/objects/Currency__c/fields/Symbol_Native__c.field-meta.xml
<CustomField>
    <fullName>Symbol_Native__c</fullName>
    <description>Local/native symbol of the currency</description>
    <inlineHelpText>Local/native symbol of the currency</inlineHelpText>
    <label>Symbol Native</label>
    <length>80</length>
    <type>Text</type>
</CustomField>